Various cleanups and performance improvements (#189)
This includes:

* Fix unneccessary imports
* Remove redundant casts
* Remove unnecessary boxing
* Simplify Collection and Map operations
* Use Arrays.fill
* Use constants or valueOf instead of creating new instances
* Use StringBuilder instead of StringBuffer

Signed-off-by: Wouter Born <github@maindrain.net>